kube/deployment-rbc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-rbc
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-rbc
  template:
    metadata:
      name: kube-rbc
      labels:
        app: kube-rbc
    spec:
      containers:
        - name: kube-rbc
          image: docker-rbc
          imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: secretsecret
